syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerCadastraService {
  rpc cadastra(NovaChaveRequest) returns (NovaChaveResponse){}
}

/**
    Cria nova chave pix
 */
message NovaChaveRequest{
  string clientId = 1;
  TipoConta tipoConta = 2;
  string chave = 3;
  TipoChave tipoChave = 4;
}

message NovaChaveResponse{
  int64 pixId = 1;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  EMAIL = 1;
  CPF = 2;
  CELULAR = 3;
  ALEATORIA = 4;
}

service KeyManagerRemoveService{
  rpc remove(RemoveChaveRequest) returns (RemoveChaveResponse){}
}

/**
    Remove chave pix
*/
message RemoveChaveRequest{
  string clientId = 1;
  string pixId = 2;
}

message RemoveChaveResponse{
  string clientId = 1;
  string pixId = 2;
}